--- a/pages/index.html
+++ b/pages/index.html
@@ -5,9 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/globals.css" />
-    <title>Test</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
+    <title>MWD App</title>
   </head>
   <body>
-    <h2>Test</h2>
+    <div class="app">
+      <img src="./favicon-32x32.png" alt="" />
+      <h2>Modern Web Dev App</h2>
+    </div>
   </body>
 </html>
